//syntax = "proto2";
option java_package = "com.rwproto";
option java_outer_classname = "MsgDef";
package MsgDef;

enum Command {
	MSG_HeartBeat=100;
	MSG_Rs_DATA = 101;//消息确认
	MSG_DO_MAINROLE_CREATE = 102;//客户端主角初始化
	MSG_GET_ROLE_LIST = 104; //获取角色列表
	MSG_ROLE = 105; //创建角色
	MSG_DEL_ROLE = 106; //删除角色...
	MSG_CHOOES_ROLE = 107; //选择角色进入游戏
	MSG_MainService = 108;//首页
	MSG_CopyService= 109;//副本
	MSG_InitRoleData = 110;//
	MSG_SKILL = 111;//技能
	MSG_ItemBag = 112;//背包
	MSG_Hero = 113;//佣兵
	MSG_GM = 114;	//GM命令
	MSG_EQUIP = 115;//装备
    MSG_RoleAttr = 116;//角色属性
	MSG_MAGIC = 117;//法宝
	MSG_GAMBLE = 118;//垂钓
	MSG_CHAT= 119;//聊天
	MSG_EMAIL = 120;//邮件
	MSG_TRIAL = 121;//PVE活动
	MSG_RANKING = 122;//排行榜
	MSG_SYNC_PLAYER = 123;//同步主角数据
	MSG_SYNC_HERO = 124;//同步佣兵数据
	MSG_SYNC_SKILL = 125;//同步主角技能数据
	MSG_SEND_HERO_INFO = 126;//发送佣兵数据
	MSG_COMMON_MESSAGE = 127;//消息提示
	MSG_DAILY_ACTIVITY = 128; //
	MSG_LOGIN_PLATFORM = 129;
	MSG_LOGIN_GAME = 130;
	MSG_LOAD_MAINCITY = 131;
	MSG_PLAYER_OFF_LINE = 132;
	MSG_FRIEND = 133;
	MSG_SIGN = 134;
	MSG_PEAK_ARENA = 139;
	MSG_ARENA = 140;
	MSG_VIP = 141;
	MSG_HOT_POINT = 142;
	MSG_SETTING = 143;
	MSG_OtherRoleAttr = 144;//查看其它玩家数据
	MSG_STORE = 145;//商城
	MSG_UnendingWar = 146;//无尽的战火
	MSG_Worship = 147;//膜拜
	MSG_TOWER = 148;//爬塔
	MSG_TASK = 149;//任务
	MSG_TIME = 151;//系统时间
	MSG_GUIDE = 152;//引导
	MSG_SECRET_AREA = 153;//秘境
	MSG_ERRORINFO = 154;//错误信息
	MSG_SECRET_MEMBER= 155;//秘境玩家
	MSG_Inlay = 156;//镶嵌宝石
	MSG_DATA_SYN = 157;//数据同步
	MSG_BATTLE_TOWER = 158;//试练塔
	MSG_FASHION = 159;//时装
	MSG_MainMsg=160;//主城显示信息、跑马灯
	MSG_NEW_GUIDE = 161;//重构的新手引导
	MSG_PLOT = 162;//剧情
	MSG_PLAYER_LOGOUT = 163;
	MSG_DailyGif = 164;//七日礼包
	MSG_RED_POINT = 165;//红点
	MSG_FRSH_ACT = 166;//开服活动
	MSG_RECONNECT = 167;//断线重连
	MSG_PVE_INFO = 168;//请求pve活动信息
	MSG_NOTICE = 169;//请求通告
	MSG_SDK_VERIFY = 996;//验证sdk登陆
	MSG_NUMERIC_ANALYSIS = 997; //数值测试场景通讯协议
	MSG_PLATFORMGS = 998;//登陆服游戏服通讯协议
	MSG_GAMEPRESS = 999;//压测协议
	
	MSG_GROUP = 150;//公会基础管理
	MSG_GROUP_MEMBER_MANAGER = 170;//公会成员管理
	MSG_GROUP_PERSONAL = 171;//公会个人操作
	MSG_GROUP_SKILL = 172;//帮派技能
	MSG_GIFT_CODE = 173;//兑换码
}